# module-used-by

./: .pre-commit-hooks.yaml  LICENSE  README.adoc  setup.cfg
module_used_by/: mubclass.py  x.py
tests/: test_mubclass.py
tests/fixtures/a/: assem-a.adoc
tests/fixtures/b/: assem-b.adoc  assem-c.adoc
tests/fixtures/modules/: a.adoc  b.adoc  notused.adoc
