[metadata]
name = module_used_by
version = 0.1.0
description = Update module file comment with assembly file names.

[options]
packages = find:
install_requires =
	GitPython>=3.1.24

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    module-used-by = module_used_by.mubclass:fix_file

